--- a/realms.tex
+++ b/realms.tex
@@ -61,7 +61,7 @@
     Toussaint appears as an idyllic region right out of a wondertale: Mild climes, blue waters and volcanic rock make 
     the duchy the source of the continent's finest wines. It is a vassal of \nameref{realm:nilfgaard}, but largely 
     autonomous and gouverned in most matters by the duchess Anna Henrietta. Traditions of chivalric virtue are held in 
-    high esteem by the Toussaintese, and the executive arm of gouvernement consists almost entirely of Knights-errant,
+    high esteem by the Toussaintese, and the executive arm of gouvernement consists almost entirely of \hyperref[profession:knight_errant]{Knights-errant},
     bound by honour rather than pay. The duchy was also the location in which, during the conjecture of spheres, the 
     gate to the world of vampires opened.
 }
