Finish section on nations

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -64,6 +64,7 @@ footheight=38pt]{scrreport}
 
 \input{abilities.tex}
 \input{realms.tex}
+\input{monsters.tex}
 
 \maketitle
 \setcounter{tocdepth}{1}
@@ -220,7 +221,7 @@ Elves gain one additional attribute point in REF, as well as a bonus success to 
 Dopplers live a dangerous life: Should they be found out, most would burn them at the stake or try to exploit them in criminal endeavours.
 They can take the shape of any humanoid creature\footnote{Whose size is not too different to their own, roughly from 80cm to 280cm} they have seen before, which not only makes them look practically identical but also allows the
 doppler to use some of their skills. Any permanent markings on the body, such as scars or tattoos, will be present in any form the doppler takes.
-The doppler may not change his shape while touching silver, and cannot create silver accessories. Clothes and the like can be manifested, 
+The doppler may not change his shape while touching silver, and cannot create silver accessories. Clothes and the like can be manifested,
 but turn into unsightly lumps of flesh when out of contact with the doppler's body.
 \\\\
 Dopplers don't gain any points by default, but may \textit{transform}. When transformed into another character, their effective skill points in
@@ -267,7 +268,12 @@ likely to wield a \hyperref[weapon:gwyhir]{Gwyhir}, but light armour, sword and 
 They should not start out with wealth above the equivalent of two commerce points.
 
 \subsection{Knight-errant}\label{profession:knight_errant}
-\dots
+Well-armed, usually noble-born cavalrymen in the service of the dukes of \nameref{realm:toussaint}. They value their honour over their lives and are
+bound only by their word. In \nameref{realm:toussaint}, they serve as a free police-force, envoys to other states and keepers of the peace in general.
+Younger Knights-errant in particular are drawn to acts of foolish grandeur, such as taking on monsters on their own and without any silver. Within
+\nameref{realm:toussaint}, they are easy enough to find, but they will need a very good reason to venture beyond the \hyperref[realm:toussaint]{duchy's} border.
+A Knight-errant should start out with full body armour, a (possibly armoured) horse, a sword as backup and a primary battle weapon such as a lance or
+a bow. Their starting wealth should not exceed the equivalent of five or six commerce points, nor go below the equivalent of three.
 
 \section{Witchers}
 Since being a Witcher determines both one's profession and genetic makeup, they will be treated separately from all other types of character. Quite appropriately,
@@ -314,12 +320,12 @@ witchers, are not averse to slaying dragons.
 The Vipers split from the School of the Bear soon after its foundation and moved south, into \nameref{realm:nilfgaard}.
 They accepted contracts on humans as well as monsters, though their purpose was another: to defeat the Wild Hunt.
 When they refused to enter the service of the Usurper, he ordered his armies to destroy their keep, scattering the students.
-They have since been banned from entering any city large enough to control this edict.
+They have since been banned from entering any city large enough to enforce this edict.
 
 \paragraph{School of the Wolf:}
 Once occupying the fortress of Kaer Morhen in the \nameref{region:blueMtns}, the Wolves fell victim to a pogrom roused by
-mages and priests that destroyed their home and their order. Now the keep only serves as a place for the last remnants of 
-the school to winter.
+mages and priests that destroyed their home and their order. Now the keep only serves as a place for the last remnants of
+the school to spend the winter.
 
 \chapter{Magic system}
 \section{Witcher signs}\label{rule:signs}
@@ -414,15 +420,15 @@ Weapons and armor may be inlaid with runes by some skilfull craftsmen. These pro
 These are some particular weapons which, technically, fall into one of the categories of the Cogent rule book,
 but receive superior stats to reflect their renown within the world.
 
-	\weapon[weapon:gwyhir]{Gwyhir}{Forged by cunning gnomes in the deep smithies of Mount Carbon, These swords
+\weapon[weapon:gwyhir]{Gwyhir}{Forged by cunning gnomes in the deep smithies of Mount Carbon, These swords
 	are widely considered the best to be bought for money.}{3}{3}
 
 \chapter{Detailed currencies}
 Since haggling can be quite fun, and makes much more sense when playing with actual numbers than with commerce points%
 \footnote{Raising the reward for taking care of some monster from the price of a sword to the price of a house, for instance,
-is rather unrealistic},
+	is rather unrealistic},
 here is a proposal for a more detailed financial system. To make it more realistic (and true to the games), different nations
-will use different coinage, so travel may well include some measure of exchanging one currency to another. For the player's 
+will use different coinage, so travel may well include some measure of exchanging one currency to another. For the player's
 convenience, the narrator may simply pick the coinage they like best and pretend it were universal.
 \\[2ex]
 Since there is already some level of complexity within each currency, it may be most convenient to simply split one's
@@ -435,27 +441,27 @@ if large purchases are to be made.
 I want to be very clear about the fact that the coins listed below were, aside from the three well-known ones, invented
 or at least introduced to the world of the Witcher by me. They are not canon and may, in some cases, even conflict
 with the canon, but I have taken the liberty to create systems of coinage which I find at least credible both within
-the context of the Witcher and without it. My hope is that asking for two trees will be more immersive than asking 
-for twenty copper-pieces, and also that the handful of names necessary to play in one location are not too many to 
-remember. 
+the context of the Witcher and without it. My hope is that asking for two trees will be more immersive than asking
+for twenty copper-pieces, and also that the handful of names necessary to play in one location are not too many to
+remember.
 
 \section{\hyperref[realm:temeria]{Temerian} coinage}
-The most well-known \hyperref[realm:temeria]{Temerian} coin is doubtlessly the crown. Making this the \textit{only} 
-\hyperref[realm:temeria]{Temerian} coin, however, would be blatantly ignorant of actual systems of currenty as well 
+The most well-known \hyperref[realm:temeria]{Temerian} coin is doubtlessly the crown. Making this the \textit{only}
+\hyperref[realm:temeria]{Temerian} coin, however, would be blatantly ignorant of actual systems of currenty as well
 as simple practicality. Here, then, is the full system:
 
 \begin{itemize}
-	\item \textbf{Studs:} Small copper coins, named in times long past after the studs on the crown of Temeria. 
-		  Their original name no one now recalls. Four studs will buy a hot meal or a bed in an inn for a night.
+	\item \textbf{Studs:} Small copper coins, named in times long past after the studs on the crown of Temeria.
+	      Their original name no one now recalls. Four studs will buy a hot meal or a bed in an inn for a night.
 	\item \textbf{Trees:} Large copper coins, named after the large tree-shapes on the crown of Temeria. Trees are
-		  the value and weight of ten studs.
+	      the value and weight of ten studs.
 	\item \textbf{Crowns:} Small silver coins, valued at 60 studs. A crown's worth of studs weighs precisely half
-		  a \hyperref[realm:temeria]{Temerian} pound. Expensive swords may cost around one crown, perhaps more if made by renowned craftsmen or decorated lavishly.
-	\item \textbf{Towers:} Silver coins the weight and value of 24 crowns, named for the depiction of \nameref{city:vizima}'s 
-		  chief gate impressed on them, on which a tower features prominently.
+	      a \hyperref[realm:temeria]{Temerian} pound. Expensive swords may cost around one crown, perhaps more if made by renowned craftsmen or decorated lavishly.
+	\item \textbf{Towers:} Silver coins the weight and value of 24 crowns, named for the depiction of \nameref{city:vizima}'s
+	      chief gate impressed on them, on which a tower features prominently.
 	\item \textbf{Royal crowns:} Small gold coins, valued at 120 crowns. Officially, they are called eagles, but since for
-		  a long time only nobility dealt in large enough sums to need these, they were commonly called  `Nobleman's crowns',
-		  `King's crowns' or `royal crowns'. The latter name stuck.
+	      a long time only nobility dealt in large enough sums to need these, they were commonly called  `Nobleman's crowns',
+	      `King's crowns' or `royal crowns'. The latter name stuck.
 \end{itemize}
 
 \section{\hyperref[realm:redania]{Redanian} coinage}
@@ -466,11 +472,11 @@ here is a more detailed set of denominations.
 	\item \textbf{Pennies:} Small copper coins, of similar value to the Temerian studs\footnote{Conversion rates may differ and change, of course}.
 	\item \textbf{Guinnies:} Medium sized copper coins. They are the exact weight and value of 12 pennies.
 	\item \textbf{Hierarchs:} Large copper coins, first commissioned by a hierach of \hyperref[city:novigrad]{Novigrad} to
-		  be the precise weight and value of 36 pence.
+	      be the precise weight and value of 36 pence.
 	\item \textbf{Orens:} Medium sized silver coins, valued at 240 pence. An oren's worth of pennies weighs precisely one
 	      \hyperref[realm:redania]{Redanian} pound.
 	\item \textbf{Barges:} Small gold coin with an impression of a trade ship, commissioned by the \hyperref[city:novigrad]{Novigrad}
-		  city council to celebrate their new-found wealth soon after the city gained independence. A barge is valued at 24 orens.
+	      city council to celebrate their new-found wealth soon after the city gained independence. A barge is valued at 24 orens.
 \end{itemize}
 
 \section{\hyperref[realm:nilfgaard]{Nilfgaardian} coinage}
@@ -478,11 +484,11 @@ The `\hyperref[realm:nilfgaard]{Nilfgaardian} crown' is the floren. Below is a l
 
 \begin{itemize}
 	\item \textbf{Silans:} Very small copper coins of about half the weight and purchasing power of the \hyperref[realm:temeria]{Temerian}
-		  stud. 
+	      stud.
 	\item \textbf{Deniers:} Small copper coins. They are the exact weight and value of 4 Silans.
 	\item \textbf{Petalens:} Large copper coins. They are the exact weight and value of 100 Silans.
 	\item \textbf{Florens:} Medium sized silver coins, valued at 500 Silans. A Floren's worth of Silans weighs
-		  precisely 500 \hyperref[realm:nilfgaard]{Nilfgaardian} grams.
+	      precisely 500 \hyperref[realm:nilfgaard]{Nilfgaardian} grams.
 	\item \textbf{Usurper's gold:} Very small gold coins with an impression of the Usurper's face. Valued at 20 Florens.
 	\item \textbf{Suns:} Small gold coins, valued at 50 Florens.
 \end{itemize}
@@ -519,86 +525,28 @@ Stats are, once again, only suggestions
 While not magical in the ordinary sense of the word, these wild animals pose a serious threat to any wanderer
 foolish enough to disturb them.
 
-\subsection{Bears}
-Large heaps of muscle and fur. Any wounds ordinary weapons can inflict are likely only to make them more irate still.
-
-\subparagraph{Stats:}
-4-6 STR, 0-1 REF, 0-1 Claw'n'Maw (proficiency)
-
-\subsection{Wargs}
-The larger, stronger, nastier cousins of wolves. It is said they delight in evil and cruelty, though scholars
-are dubious on this point. It is generally agreed, however, that wargs tend to lead packs of their lesser kin
-instead of banding together themselves.
-
-\subparagraph{Stats:}
-1-2 STR, 0-2 REF, 1-2 Claw'n'Maw (proficiency)
-
-\subsection{Wolves}
-Slender, but strong, and silent until they attack. A single wolf should not pose a great threat to a determined
-man\footnote{Or a woman, for that matter} with a sword, but they tend to come in packs.
-
-\subparagraph{Stats:}
-0-1 STR, 0-2 REF, 0-1 Claw'n'Maw (proficiency)
+\printmonster{bear}
+\printmonster{warg}
+\printmonster{wolf}
 
 \section{Humanoids}
 These are the various monsters of human shape prowling the world.
 
-\subsection{Harpies}
-Roughly Halfling-sized, feathered creatures, chiefly found in areas with rough cliffs.
-
-\subparagraph{Stats:}
-(-1)-0 STR, 1-2 REF, 0-1 Claw'n'Maw (proficiency)
-
-\subsubsection{Abilities}
-
-\printability{fly:humanoid}
+\printmonster{harpy}
 
 \section{Necrophages}
 Here are listed the manifold corpse-eaters plagueing the war-torn areas of the North. Whereever there
 are corpses unburied, one can be sure to come across a handful of these truly unsanitory creatures.
 
-\subsection{Rotfiends}
-Of humaniod shape, but with pale, sickly yellow-ish skin and thick, protruding, deeply red veins. Like
-with most necrophages, their stench proceeds them. When terminally wounded, they are prone to explode
-spectacularily. This is their true danger, since their blood is poisonous.
-
-Injuries dealt by non-silver weapons are halved.
-
-\subparagraph{Stats:}
-0-1 STR, 0-1 REF, 0-1 Strangle (proficiency)
-
-\subsubsection{Abilities}
-
-\printability{selfdetonation:rotfiend}
+\printmonster{rotfiend}
 
 \section{Spectres}\label{monster:spectre}
 This section contains all those incorporeal beings whose origins can be found in the deceased. They cannot be
 harmed unless by silver weapons or specialized magic. The weaker ones can be dispelled by silver, but those
 with uncut ties to the world of the living may simply reappear the next day if defeated.
 
-\subsection{Noonwraiths}
-Usually the restless souls of those who came to a violent end in the fields by day. They scorch the earth around them
-and can become quite dazzlingly bright. Since they are scolding hot, every turn in close combat results in a minor injury.
-
-\subparagraph{Stats:}
-1-2 REF, 0-1 STR, 1-2 Wraith's wrath (proficiency, used in ability-rolls)
-
-\subsubsection{Abilities}
-
-\printability{blinding}
-\printability{restoration:spectre}
-
-\subsection{Nightwraiths}
-Usually the restless souls of those who came to a violent end in the fields by night. They freeze the grass around them
-and can emit fearsomely frosty fog. Since they are deadly cold, every turn in close combat results in a minor injury.
-
-\subparagraph{Stats:}
-1-2 REF, 0-1 STR, 1-2 Wraith's wrath (proficiency, used in ability-rolls)
-
-\subsubsection{Abilities}
-
-\printability{freezingfog}
-\printability{restoration:spectre}
+\printmonster{noonwraith}
+\printmonster{nightwraith}
 
 \chapter{List of abilities}
 
