--- a/realms.tex
+++ b/realms.tex
@@ -11,9 +11,10 @@
 
 \definerealm{cintra}{Cintra}
 {
-
+    Once a powerful independent nation, Cintra, being south of \nameref{realm:temeria} fell swiftly to the first \hyperref[realm:nilfgaard]{Nilfgaardian}
+    Invasion. With it's capital sacked and put to the sword, the royal family nigh on erased and the heiress Cirilla married to the invader, the
+    country has lost nigh-on all autonomy.
 }
-{}
 
 \definerealm{kaedwen}{Kaedwen}
 {
@@ -24,14 +25,14 @@
 
 \definerealm{nilfgaard}{Nilfgaard}
 {
-    The North is faced by one singular Enemy: The Nilfgaardian Empire that subjugated or conquered all 
+    The North is faced by one singular Enemy: The Nilfgaardian Empire that subjugated or conquered all
     provinces south of the Yaruga. It's recent line of emperors was broken by the Usurper, who had
     Fergus var Emreis assassinated and seized the throne for himself. He was in turn overthrown by the previous
-    emperor's heir, Emhyr var Emreis. Emhyr undid the Usurper's reforms and began reaching northwards, but was 
-    defeated twice, claiming only \nameref{realm:cintra} after his second failed invasion. The empire's strong 
+    emperor's heir, Emhyr var Emreis. Emhyr undid the Usurper's reforms and began reaching northwards, but was
+    defeated twice, claiming only \nameref{realm:cintra} after his second failed invasion. The empire's strong
     economy led to a victory of sorts, however: The devastated North was forced to rely on grain and goods imported
     from their southern foe, weakening their own economies.
-    
+
     \paragraph{Vassal states}
     \begin{itemize}
         \item \nameref{realm:cintra}
@@ -50,19 +51,19 @@
 
 \definerealm{temeria}{Temeria}
 {
-    \nameref{realm:temeria} lies south of the \hyperref[region:pontar]{Pontar} and west of \nameref{realm:aedirn}. To her west lie the smaller realms of 
-    Cidaris and Verden, as well as the ancient forest of \nameref{region:brokilon}. The \hyperref[realm:temeria]{Temerian} army defeated the recent 
+    \nameref{realm:temeria} lies south of the \hyperref[region:pontar]{Pontar} and west of \nameref{realm:aedirn}. To her west lie the smaller realms of
+    Cidaris and Verden, as well as the ancient forest of \nameref{region:brokilon}. The \hyperref[realm:temeria]{Temerian} army defeated the recent
     \hyperref[realm:nilfgaard]{Nilfgaardian} invasion and King Foltest used this success and the chaos left behind by the war
     to expand his influence over the \hyperref[region:mahakamMtns]{mountains of Mahakam} and the southern regions of Sodden and Brugge.
 }
 
 \definerealm{toussaint}{Toussaint}
 {
-    Toussaint appears as an idyllic region right out of a wondertale: Mild climes, blue waters and volcanic rock make 
-    the duchy the source of the continent's finest wines. It is a vassal of \nameref{realm:nilfgaard}, but largely 
-    autonomous and gouverned in most matters by the duchess Anna Henrietta. Traditions of chivalric virtue are held in 
+    Toussaint appears as an idyllic region right out of a wondertale: Mild climes, blue waters and volcanic rock make
+    the duchy the source of the continent's finest wines. It is a vassal of \nameref{realm:nilfgaard}, but largely
+    autonomous and gouverned in most matters by the duchess Anna Henrietta. Traditions of chivalric virtue are held in
     high esteem by the Toussaintese, and the executive arm of gouvernement consists almost entirely of \hyperref[profession:knight_errant]{Knights-errant},
-    bound by honour rather than pay. The duchy was also the location in which, during the conjecture of spheres, the 
+    bound by honour rather than pay. The duchy was also the location in which, during the conjecture of spheres, the
     gate to the world of vampires opened.
 }
 
@@ -74,8 +75,8 @@
 }
 {aedirn}
 
-\definecity{ard_carraigh}{Ard Carraigh} 
-{ 
+\definecity{ard_carraigh}{Ard Carraigh}
+{
     The capital city of \nameref{realm:kaedwen}, though lesser in most ways than \nameref{city:ban_ard}.
 }
 {kaedwen}
@@ -103,14 +104,14 @@
 
     Officially, the Free City is gouverned by a city council, but in fact all real power rests in the hands of four criminal organizations:
     \begin{itemize}
-    	\item Whoreson Junior's gang, involved in gambling and brothels and the like. They are, as a rule, despised even by their peers.
-    	\item Sigi Reuven's gang, lead by the former redanian agent Sigismund Dijkstra, mostly lurks in the shadows of the town.
-    	      How exactly they make ends meet is unknown, however the assumption that it is connected to clandestine activities of some sort
-    	      is quite obious.
-    	\item The inhabitants of the secret street aptly named ``the Putrid Grove'' led by Francis Bedlam, the ``King of Beggars''.
-    	      The group consists mostly of thieves and beggars who find refuge and pawn shops in their home street.
-    	\item Cleaver's gang mostly consists of dwarves, quite sensibly, as Cleaver himself is a dwarf. It specializes on thuggery of all
-    	      kinds and practically amounts to a small army.
+        \item Whoreson Junior's gang, involved in gambling and brothels and the like. They are, as a rule, despised even by their peers.
+        \item Sigi Reuven's gang, lead by the former redanian agent Sigismund Dijkstra, mostly lurks in the shadows of the town.
+              How exactly they make ends meet is unknown, however the assumption that it is connected to clandestine activities of some sort
+              is quite obious.
+        \item The inhabitants of the secret street aptly named ``the Putrid Grove'' led by Francis Bedlam, the ``King of Beggars''.
+              The group consists mostly of thieves and beggars who find refuge and pawn shops in their home street.
+        \item Cleaver's gang mostly consists of dwarves, quite sensibly, as Cleaver himself is a dwarf. It specializes on thuggery of all
+              kinds and practically amounts to a small army.
     \end{itemize}
 }
 {redania}
@@ -147,6 +148,14 @@
 
 \definecity{beauclair}{Beauclair}
 {
-\dots
+    The seat of the Dukes and Duchesses of \hyperref[realm:toussaint]{Toussaint} is a place for merrymaking of many sorts,
+    though wine and romance play a chief part in most of them. The city surrounds the ducal palace and, thanks to it's
+    position on the bank of the Sansretour River, thrives with trade and travellers.
 }
 {toussaint}
+
+\definecity{cintra}{Cintra}
+{
+    The capital city of \nameref{realm:cintra} and the seat of her kings. It was brutally sacked in the first Northern War.
+}
+{cintra}
