Add mail link to author name

--- a/Witcher Plugin.tex
+++ b/Witcher Plugin.tex
@@ -15,7 +15,7 @@ footheight=38pt]{scrreport}
 \def\theversion{0.0.1}
 
 \title{\thetitle}
-\author{Moritz Bär}
+\author{\href{mailto:TurambarOfManyNames@outlook.com}{Turambar of Many Names}}
 
 % section numbers in margins:
 \renewcommand\sectionlinesformat[4]{\makebox[0pt][r]{#3}#4}
